--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=CadastroDeNinjas
+
+# Configuração do Banco de Dados H2
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+# JPA Config
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Ativar Console H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configurar o flyway
+spring.flyway.enable=true
+spring.flyway.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
