--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#permitir put no html
+spring.mvc.hiddenmethod.filter.enabled=true
+
+
 # Ativar Console H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
